--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,3 +1,34 @@
+actor {
+  #
+  # Timeout in seconds
+  #
+  timeout = 5
+  #
+  # Parameters to control the handling of failed child actors:
+  # it is the number of retries within a certain time window.
+  # 
+  # The superviser strategy restarts a child up to 10 restarts 
+  # per minute. The child actor is stopped if the restart count 
+  # exceeds maxRetries during the withinTimeRange duration.    
+  #
+  maxRetries = 10
+  #
+  # Time range in minutes
+  #
+  timeRange = 1
+  #
+  # Child actors are defined leveraging a RoundRobin pool with a 
+  # dynamic resizer. The boundaries of the resizer are defined
+  # below
+  #
+  lower = 2
+  upper = 100
+  #
+  # The number of instances for the RoundRobin pool
+  #
+  instances = 50
+ 
+}
 
 binding {
   #
@@ -13,7 +44,31 @@ broker {
   #
   endpoint = "http://localhost"
 }
-
+#
+# The configuration of the Carto DB (PostgreSQL)
+# connector 
+#
+cartodb {
+  #
+  # The host parameter to access the Carto REST
+  # SQL interface
+  #
+  host = "127.0.0.1"
+  #
+  # The port parameter to access the Carto REST
+  # SQL interface
+  #
+  port = 8080
+  #
+  # The API key
+  #
+  apiKey = ""
+  #
+  # The duration in seconds to wait until the
+  # Carto REST service responds
+  #
+  duration = 5
+}
 subscription {
 
   #
@@ -82,10 +137,23 @@ subscription {
 #
 security {
   #
+  # SSL/TLS support to send request to the Carto DB
+  # REST SQL API
+  #
+  cartodb {
+    #
+    # Indicator to specify whether SSL must be used
+    # for client authentication. If TLS certificates
+    # are used, the certificate files must be included
+    # into the connection
+    #
+    ssl = false
+  }
+  #
   # SSL/TLS support for send subscription requests
   # to the Orion Context Broker
   #
-  client = {
+  fiware = {
     #
     # The default configuration for subscription
     # requests does not support SSL/TLS. Set this
